# tokenhelm-observation

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  cost_tracking.py  pricing.yaml  requirements.txt  run_demo.py  verify_tracking.py
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
demo/: run_demo_e2e.py
docs/: api.md  architecture.md  deployment.md  event-source-plugin.md  roadmap.md
docs/adr/: 0001-core-architecture.md  0002-observation-protocol-v1.md  0003-typescript-observation-sdk.md  0004-protocol-conformance-kit.md  0005-postgres-eventsource.md  README.md  TEMPLATE.md
frontend/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: BreakdownTable.tsx  DateRangeFilter.tsx  EmptyState.tsx  RecordsTable.tsx  TrendChart.tsx  (+1 more)
multi_agent/: __init__.py  agent.py
pipeline_agent/: __init__.py  agent.py
protocol/: README.md  protocol.json
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: generate_fixture.py  scenario.py
sdk/python/observation_sdk/: __init__.py  builder.py  client.py  context.py  emitter.py  protocol.py  transport.py
sdk/python/tests/: conftest.py  test_conformance.py  test_context.py  test_protocol.py  test_reconciliation.py  test_transport.py
single_agent/: __init__.py  agent.py
(+181 files in other folders)
